--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script>
+      console.log("%cЛюбопытно, да?", "color: green; font-size: 20px;");
+    </script>
   </body>
 </html>
