--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/whyishoud/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tell me</title>
+    <title>Why shoud I work for you?</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
     <script>
-      console.log("%cЛюбопытно, да?", "color: green; font-size: 20px;");
+      console.log("%cЛюбопытно, да?", "color: green; font-size: 20px;")
     </script>
   </body>
 </html>
